<resources>
    <string name="app_name">LProject</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="welcome">Вітаємо, %1$s</string>
    <string name="catalog">Каталог подій</string>
    <string name="my_events">Мої події</string>
    <string name="event_name">Назва заходу:\u0020\u0020</string>
    <string name="city_name">Місто проведення:\u0020\u0020</string>
    <string name="start_date">Дата початку:\u0020\u0020</string>
    <string name="date_formatter">dd.MM.yyyy</string>
    <string name="address">Адреса проведення:\u0020\u0020</string>
    <string name="see_my_event">Перегляд моєї події</string>
    <string name="start_date_time">Дата і час початку заходу:\u0020\u0020</string>
    <string name="end_date_time">Дата і час кінця заходу:\u0020\u0020</string>
    <string name="your_visits">Ваші відвідування локацій:</string>
    <string name="set_presence">Позначити присутність</string>
    <string name="description">Опис:</string>
    <string name="registered">Ви вже зареєстровані!</string>
    <string name="register">Зареєструватися</string>
</resources>